# crabcamera

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  AUDIT_FIXES.md  AUTHORS.md  AWESOME_LIST_PROMOTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  IMPROVEMENT_PLAN.md  LICENSE-MIT  MASTER_ROADMAP.md  MUXIDE_SPEC.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY_2025_12_15.md  SPONSORS.md  V0_5_0_ROADMAP.md  VALIDATION_REPORT.md  VIDEO_RECORDING_ARCHITECTURE_ANALYSIS.md  WORK_PLAN_V0.4.1.md  build.rs  coverage_report.txt  crabcamera-muxide.code-workspace  crabcamera.toml  final_obsbot_test.rs  json  punch_analysis.json  simple_test.rs  sync_validation.rs  tarpaulin-report.html  test_obsbot_controls.rs  test_windows_controls.rs  validation_test.rs
.beads/: issues.jsonl
.claude/: settings.local.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: publish.yml  release.yml  test-and-coverage.yml
benches/: encoding_benchmarks.rs  webrtc_benchmarks.rs
demo/: README.md
demo-app/: Cargo.toml
demo-app/src/: main.rs
demo-app/ui/: camera_controls.slint
docs/: ARCHITECTURE_NARRATIVE.md  AUDIO_SPELLBOOK.md  COMPREHENSIVE_TEST_PLAN.md  INVARIANT_PPT_GUIDE.md  MUXIDE_UPDATE_PLAN.md  SYSTEM_MAP.md  TEST_IMPLEMENTATION_STATUS.md  WEBRTC_SIMULCAST_ARCHITECTURE.md  WEBRTC_SPELL_PROMPT.md
docs/archive/: WEBRTC_AUDIT_REPORT.md
docs/audit/: SYSTEM_DEPENDENCY_GRAPH.md
docs/headless/: HEADLESS_DOCUMENTATION_INDEX.md  HEADLESS_EXPANSION_EVALUATION.md  HEADLESS_SPELLS.MD  HEADLESS_SPELLS_REVIEW.md
docs/initiatives/: BASE_AUDIT_CHECKLIST.md  BEADS_REMEDIATION_PLAN.md  REAL_IMPLEMENTATION_AUDIT.md
docs/invocations/: WebRTCCertificateIdentity_invocation.md  WebRTCDependencyPolicy_invocation.md  WebRTCH264EncoderBridge_invocation.md  WebRTCICEAgentLifecycle_invocation.md  WebRTCICECandidateExchange_invocation.md  WebRTCLibrarySelection_invocation.md  WebRTCOpusEncoderBridge_invocation.md  WebRTCRTP_invocation.md  WebRTCRealEncoding_invocation.md  WebRTCRealICE_invocation.md  WebRTCRealSDP_invocation.md  WebRTCSignalingContract_invocation.md
docs/issues/: BUCKET_3_ISSUES.md
docs/spells/: WebRTCCertificateIdentity_spell.md  WebRTCDependencyPolicy_spell.md  WebRTCH264EncoderBridge_spell.md  WebRTCICEAgentLifecycle_spell.md  WebRTCICECandidateExchange_spell.md  WebRTCLibrarySelection_spell.md  WebRTCOpusEncoderBridge_spell.md  WebRTCRTPPacketizeH264_spell.md  WebRTCRTPPacketizeOpus_spell.md  WebRTCRealEncoding_spell.md  WebRTCRealICE_spell.md  WebRTCRealSDP_spell.md  WebRTCSRTPSession_spell.md  WebRTCSignalingContract_spell.md
examples/: audit_flow_debug.rs  camera_on_test.rs  camera_preview.rs  camera_warmup_analysis.rs  direct_capture.rs  explore_plugin.rs  format_debug.rs  functional_test.rs  hardware_audit.rs  live_audio_test.rs  live_av_recording.rs  quick_test.rs  raw_nokhwa_test.rs  record_video.rs  reuse_debug.rs  save_test_output.rs  smart_capture_demo.rs  test_encoder_output.rs  visual_camera_test.rs  webrtc_real_camera_test.rs  webrtc_test.html
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
scripts/: cleanup_build_artifacts.sh  coverage-gate.ps1  coverage-sections.sh  create_releases.sh  functional-review.ps1  pre-commit.ps1
src/: camera.rs  config.rs  constants.rs  contextlite.rs  errors.rs  invariant_ppt.rs  lib.rs  permissions.rs  registry.rs  types.rs
src/audio/: capture.rs  clock.rs  device.rs  encoder.rs  mod.rs
src/commands/: advanced.rs  audio.rs  capture.rs  config.rs  device_monitor.rs  init.rs  (+7 more)
tests/: audio_capture_test.rs  av_integration.rs  commands_advanced_test.rs  commands_capture_test.rs  commands_init_test.rs  commands_permissions_test.rs  contract_invariants.rs  data_channel_test.rs  encoder_test.rs  errors_test.rs  focus_stack_test.rs  fuzz_tests.rs  integration_tests.rs  peer_connection_test.rs  permissions_test.rs  platform_linux_test.rs  platform_macos_test.rs  platform_test.rs  platform_windows_test.rs  quality_analysis_test.rs  recording_props.rs  save_frame_compressed_quality_test.rs  standalone_test.rs  synthetic_av_test.rs  types_test.rs  webrtc_integration_test.rs  webrtc_packetizer_props.rs  webrtc_stream_contract_test.rs  webrtc_streaming_test.rs  windows_controls_unit_test.rs
(+110 files in other folders)
