[package]
name = "crabcamera"
version = "0.7.0"
edition = "2021"
description = "Advanced cross-platform camera integration for Tauri applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Michael-A-Kuykendall/crabcamera"
keywords = ["tauri", "camera", "cross-platform", "desktop", "rust"]
categories = ["multimedia", "gui"]

[workspace]

[lib]
name = "crabcamera"
path = "src/lib.rs"

[[bin]]
name = "crabcamera-cli"
path = "src/bin/cli.rs"
required-features = ["headless"]

[[bin]]
name = "headless-capture"
path = "src/bin/headless_capture.rs"
required-features = ["headless", "audio"]

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin = "2.0"
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
config = "0.14"
toml = "0.8"
block = "0.1"
serde_json = "1.0"
ctrlc = "3.4"
bytes = "1.0"

# Video recording dependencies (v0.5.0)
muxide = { version = "0.1.2", optional = true }
openh264 = { version = "0.9", optional = true }

# Audio recording dependencies (v0.5.0)
cpal = { version = "0.15", optional = true }
libopus_sys = { version = "0.3.2", features = ["bundled", "static"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# ContextLite integration
contextlite-client = { version = "2.0.7", optional = true }

# WebRTC Evaluation: After extensive development and multiple attempts,
# we determined that WebRTC streaming fell outside our core value proposition.
# CrabCamera focuses on being the premier cross-platform camera capture library
# for Tauri applications, providing reliable camera access, recording, and controls.
# Real-time streaming is better handled by specialized streaming libraries or
# browser-native WebRTC implementations.
#
# This decision sharpened our focus: CrabCamera excels at camera capture and
# recording, letting applications choose their preferred streaming solutions.
# webrtc = { version = "0.14", optional = true }
# webrtc-util = "0.12.0"

[features]
default = []
recording = ["dep:muxide", "dep:openh264"]
audio = ["dep:cpal", "dep:libopus_sys", "dep:crossbeam-channel"]
full-recording = ["recording", "audio"]
headless = []
contextlite = ["dep:contextlite-client"]
# WebRTC feature removed: See dependency comment above for rationale.
# This maintains backwards compatibility for existing users while
# encouraging migration to dedicated streaming solutions.
# webrtc = ["dep:webrtc", "recording"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_MediaFoundation", 
    "Win32_Media_DirectShow",
    "Win32_System_Com",
    "Win32_Foundation",
    "implement"
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
serde_json = "1.0"
ctrlc = "3.4"
proptest = "1.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encoding_benchmarks"
harness = false
required-features = ["recording", "audio"]

[[example]]
name = "camera_preview"
path = "examples/camera_preview.rs"

[[example]]
name = "quick_test"
path = "examples/quick_test.rs"

[[example]]
name = "record_video"
path = "examples/record_video.rs"
required-features = ["recording"]

[[example]]
name = "save_test_output"
path = "examples/save_test_output.rs"
required-features = ["recording"]

[[example]]
name = "functional_test"
path = "examples/functional_test.rs"
required-features = ["recording"]

[[example]]
name = "test_encoder_output"
path = "examples/test_encoder_output.rs"
required-features = ["recording"]

[[test]]
name = "recording_props"
path = "tests/recording_props.rs"
required-features = ["recording"]

[[test]]
name = "headless"
path = "tests/headless/mod.rs"
required-features = ["headless"]
